--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,8 @@
       <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
       <input type="submit" value="Submit">
     </form>
+    <footer>
+      &copy;2023 IDOSTech
+    </footer>
   </body>
 </html>
