--- a/hobies.html
+++ b/hobies.html
@@ -14,5 +14,8 @@
       <li><a href="https://www.linkedin.com/in/oluwaseyi-idowu-sunday">Technical Writing</a></li>
       <li><a href="https://github.com/idowuseyi">Creating New Things</a></li>
     </ul>
+    <footer>
+      &copy;2023 IDOSTech
+    </footer>
   </body>
 </html>
